# simple-ci-cd

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ml_ci_cd.yaml  pipeline.yaml
data/: data.csv
src/: __init__.py  model.py  model_testing.py  model_training.py  test_model.py  train.py
